name:                lambdacube-test
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            http://github.com/TeaspotStudio/lambdacube-test#readme
license:             BSD3
license-file:        LICENSE
author:              Anton Gushcha
maintainer:          ncrashed@gmail.com
copyright:           2016 Anton Gushcha
category:            Game
build-type:          Simple
cabal-version:       >=1.10

executable lambdacube-test
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , containers >= 0.5.6.2
                     , vector >= 0.11.0.0
                     , JuicyPixels >= 3.2.7
                     , lambdacube-gl >= 0.4.0.2
                     , lambdacube-compiler >= 0.4.0.0
                     , GLFW-b >= 1.4.7.3
